--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsc-watch --onSuccess \"node dist/index.js\" "
+   "start": "node dist/index",
+    "dev": "tsc-watch --onSuccess \"node dist/index.js\" ",
+    "build": " tsc -p ."
+
   },
   "keywords": [],
   "author": "",
