--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-   "start": "node dist/index",
+    "start": "node dist/index",
     "dev": "tsc-watch --onSuccess \"node dist/index.js\" ",
     "build": " tsc -p ."
-
   },
   "keywords": [],
   "author": "",
@@ -15,5 +14,8 @@
   "devDependencies": {
     "tsc-watch": "^6.2.1",
     "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "socket.io": "^4.8.1"
   }
 }
