--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,22 +1,23 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
   "private": true,
   "scripts": {
     "start": "node dist/index",
-    "dev": "tsc-watch --onSuccess \"node dist/index.js\"",
-    "build": " tsc -p ."
+    "build": "tsc -p .",
+    "dev": "tsc-watch --onSuccess \"node dist/index.js\""
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "devDependencies": {
-    "tsc-watch": "^6.2.1",
-    "typescript": "^5.7.3"
+    "@types/node": "^20.10.4",
+    "prisma": "^5.7.0",
+    "ts-node": "^10.9.2",
+    "tsc-watch": "^6.0.4",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
-    "socket.io": "^4.8.1"
+    "@prisma/client": "5.7.0",
+    "ioredis": "^5.3.2",
+    "kafkajs": "^2.2.4",
+    "socket.io": "^4.7.2"
   }
 }
