--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scaleable-chart",
+  "name": "scaleable-chat",
   "private": true,
   "scripts": {
     "build": "turbo build",
@@ -8,14 +8,15 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "prettier": "^3.2.5",
-    "turbo": "^2.3.4",
-    "typescript": "5.5.4"
+    "@repo/eslint-config": "*",
+    "@repo/typescript-config": "*",
+    "prettier": "^3.1.0",
+    "turbo": "latest"
   },
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "yarn@1.22.22",
+  "packageManager": "yarn@1.22.19",
   "workspaces": [
     "apps/*",
     "packages/*"
